--- a/css/aside.css
+++ b/css/aside.css
@@ -12,14 +12,41 @@ body {
 }
 
 aside {
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
     padding: 30px;
     padding-left: 0;
     background-color: white;
 }
 .logo {
     margin-left: 100px;
+    font-size: 30px;
+    height: 100px;
+    width: 90px;
    
 }
 
+.main-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
+.icon {
+    height: 40px;
+    width: 50px;
+    margin-left: 110px;
+}
+
+.icon4 {
+    height: 60px;
+    width: 70px;
+    margin-left: 100px;
+    background-size: 5px;
+    background-color: rgb(221, 237, 234);
+    border-top-left-radius: 15%;
+    border-top-right-radius: 15%;
+    border-bottom-right-radius: 15%;
+}
 
