aside file update

--- a/css/aside.css
+++ b/css/aside.css
@@ -20,9 +20,9 @@ aside {
     background-color: white;
 }
 .logo {
-    margin-left: 100px;
+    margin-left: 90px;
     height: 100px;
-    width: 90px;
+    width: 95px;
    
 }
 
@@ -44,8 +44,6 @@ aside {
     margin-left: 100px;
     background-size: 5px;
     background-color: rgb(221, 237, 234);
-    border-top-left-radius: 15%;
-    border-top-right-radius: 15%;
-    border-bottom-right-radius: 15%;
+    border-top-left-radius: 15% 15%;
 }
 
