--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
-main {
+.main {
     background-color: azure;
+}
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
+}
+.homeContainer {
+    display: flex;
+    flex-direction: column;
+    
 }
