--- a/css/aside.css
+++ b/css/aside.css
@@ -6,9 +6,9 @@ body {
     display: grid;
     grid-template-columns: 18.75rem 1fr;
     margin: 0;
-    background-color: azure;
     min-height: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #F7F7F7;
 }
 
 aside {
