--- a/css/main.css
+++ b/css/main.css
@@ -24,17 +24,10 @@ p {
     flex-direction: column;
     justify-content: center;
     padding: 2rem 1.5rem;
-    background-color: #2DA492;
+    background-color: #fff;
     border-radius: 0.5rem;
-    box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;
     height: 320px;
     width: 100%;
-}
-.board-icon {
-    display: flex;
-    width: 45px;
-    margin-top: 37px;
-    margin-left: 250px;
 }
 .homeContainer > .title {
     font-size: 1.4rem;
@@ -51,12 +44,18 @@ p {
     align-items: center;
     justify-content: space-between;
 }
+.board-icon {
+    display: flex;
+    width: 45px;
+    margin-top: 37px;
+    margin-left: 250px;
+}
 .board-picture {
     width: 105px;
     margin-right: -24px;
-    margin-top: -54px;
+    margin-top: -44px;
 }
 .fa {
-    color: #fff;
+    color: black;
     font-size: 23px;
 }
