--- a/css/aside.css
+++ b/css/aside.css
@@ -1,49 +1,47 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    display: grid;
-    grid-template-columns: 18.75rem 1fr;
-    margin: 0;
-    min-height: 100vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #F7F7F7;
+  display: grid;
+  grid-template-columns: 15rem 1fr;
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #f7f7f7;
 }
 
 aside {
-    display: flex;
-    flex-direction: column;
-    gap: 7.5rem;
-    padding: 1.9rem;
-    padding-left: 0;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 7.5rem;
+  padding: 1.9rem;
+  padding-left: 0;
+  background-color: white;
 }
 .logo {
-    margin-left: 5.6rem;
-    height: 6.25rem;
-    width: 5.9rem;
-   
+  margin-left: 5rem;
+  height: 6.25rem;
+  width: 5.9rem;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    gap: 1.9rem;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 1.9rem;
+  cursor: pointer;
 }
 
 .icon {
-    height: 2.5rem;
-    width: 3.1rem;
-    margin-left: 110px;
+  height: 2.5rem;
+  width: 3.1rem;
+  margin-left: 100px;
 }
 
 .icon4 {
-    height: 3.75rem;
-    width: 4.37rem;
-    margin-left: 6.25rem;
-    background-color: rgb(221, 237, 234);
-    border-radius: 15%;
+  height: 3.75rem;
+  width: 4.37rem;
+  margin-left: 5.6rem;
+  background-color: rgb(221, 237, 234);
+  border-radius: 15%;
 }
-
